feat: 修改中位数解法

--- a/寻找两个正序数组的中位数/index.html
+++ b/寻找两个正序数组的中位数/index.html
@@ -6,5 +6,12 @@
 	</head>
 	<script src="index.js" type="text/javascript" charset="utf-8"></script>
 	<body>
+		<button onclick="t()">测试</button>
+		<script type="text/javascript">
+			let id = 0
+			function t() {
+				console.log(test(), id++)
+			}
+		</script>
 	</body>
 </html>
